--- a/package.json
+++ b/package.json
@@ -1,30 +1,36 @@
 {
-  "name": "cart",
+  "name": "oncology",
   "version": "1.0.0",
   "description": "",
-  "main": "build.js",
+  "main": "./scripts/dev.js",
   "scripts": {
     "dev": "node ./scripts/dev",
     "deploy": "node ./scripts/deploy"
   },
   "author": "",
   "license": "ISC",
-  "cart": {
+  "app": {
+    "deploy": {
+      "js": ["js"],
+      "css": ["css"]
+    },
     "dev": {
-      "js": [
+      "js": ["js"],
+      "css": ["css"],
+      "templates": {
+        "content": "./templates/content.html"
+      }
+    },
+    "src": {
+      "js":[
         "./bower_components/jquery/dist/jquery.js",
         "./js/main.js"
+      ],
+      "css":[
+        "./css/main.css"
+     
       ]
-    },
-    "deploy": {
-      "js": []
-    },
-    "templates": {
-      "content": "./templates/content.html"
-    },
-    "css": [
-      "./css/main.css"
-    ]
+    }
   },
   "dependencies": {
     "chalk": "^1.1.3",
